--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "chromadb>=0.6.3",
     "fastapi>=0.115.12",
     "redis>=5.2.1",
     "repenseai>=4.0.13",
     "requests>=2.32.3",
+    "streamlit>=1.44.1",
 ]
 
 [dependency-groups]
