--- a/installer/windows/requirements.txt
+++ b/installer/windows/requirements.txt
@@ -1,4 +1,5 @@
 pyinstaller>=5.0.0
 requests>=2.25.0
+redis>=4.3.0
 pathlib2>=2.3.0; python_version < "3.4"
 typing-extensions>=3.7.0; python_version < "3.8"
